<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/toolbar"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <!-- Email -->
    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email" />

    <!-- Credit Card Number-->
    <EditText
        android:id="@+id/edit_card_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/hint_card_number"
        android:layout_below="@id/edit_email"
        android:layout_marginTop="@dimen/margin_view"
        android:imeOptions="actionNext"
        android:imeActionId="@+id/edit_expiry_month"/>

    <!-- Horizontal divider -->
    <View
        android:id="@+id/horizontal_divider"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true" />

    <!-- Container for expiry -->
    <RelativeLayout
        android:id="@+id/layout_expiry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_card_number"
        android:layout_marginTop="@dimen/margin_view"
        android:layout_toLeftOf="@id/horizontal_divider"
        android:layout_alignParentLeft="true">

        <!-- Expiry prompt -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textview_expiry_prompt"
            android:text="@string/prompt_expiry"
            android:paddingLeft="@dimen/margin_view" />

        <!-- EditText for month -->
        <EditText
            android:id="@+id/edit_expiry_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_expiry_month"
            android:maxEms="4"
            android:padding="@dimen/margin_view"
            android:inputType="number"
            android:layout_below="@id/textview_expiry_prompt"
            android:singleLine="true"
            android:maxLength="2"
            android:imeOptions="actionNext"
            android:imeActionId="@+id/edit_expiry_year"/>

        <!-- EditText for year -->
        <EditText
            android:id="@+id/edit_expiry_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_expiry_year"
            android:maxEms="4"
            android:maxLength="2"
            android:padding="@dimen/margin_view"
            android:layout_below="@id/textview_expiry_prompt"
            android:layout_toRightOf="@id/edit_expiry_month"
            android:singleLine="true"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:imeActionId="@+id/edit_cvv"/>
    </RelativeLayout>


    <!-- layout for cvv -->
    <RelativeLayout
        android:id="@+id/layout_cvv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_card_number"
        android:layout_marginTop="@dimen/margin_view"
        android:layout_toRightOf="@id/horizontal_divider"
        android:layout_alignParentRight="true">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textview_cvv"
            android:text="@string/prompt_cvv"
            android:paddingLeft="@dimen/margin_view" />

        <!-- EditText for cvv -->
        <EditText
            android:id="@+id/edit_cvv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_cvv"
            android:singleLine="true"
            android:maxLength="4"
            android:padding="@dimen/margin_view"
            android:inputType="number"
            android:layout_below="@id/textview_cvv"
            android:imeOptions="actionDone"/>

    </RelativeLayout>

    <!-- Button -->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_create_token"
        android:text="@string/button_text_create_token"
        android:layout_below="@id/layout_expiry" />

    <!-- prompt for the token -->
    <TextView
        android:id="@+id/textview_token_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/margin_view"
        android:layout_below="@+id/button_create_token"
        android:text="@string/prompt_token"/>

    <!-- TextView to display the token -->
    <TextView
        android:id="@+id/textview_token"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_token_prompt"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        />

</RelativeLayout>